--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "element-ui": "^2.15.0",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0",
-    "vue-awesome-swiper": "^3.1.3"
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-qriously": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
